--- a/index.html
+++ b/index.html
@@ -1214,26 +1214,22 @@
               alt="Knight Portfolio Icon" />
           </div>
           <div class="project-details">
-            <h2>Accounting Firm Website</h2>
+            <a href="https://www.igi-global.com/chapter/transformative-impact-of-blockchain-technology-on-healthcare-systems-and-socioeconomic-development/372579" target="_blank">
+            <h2>Blockchain Technology on Healthcare Systems</h2></a>
             <p>
-              A professional and responsive website concept designed for a
-              fictional accounting firm. The layout highlights core financial
-              services such as bookkeeping, taxation, and consulting through
-              clean sections and intuitive navigation.
+              A professional research paper on transformative impact of blockchain technology on 
+              healthcare systems and socioeconomic development.
             </p>
             <p>
               <strong>Platforms:</strong>
-              Desktop, Laptop and Mobile
+              Web
             </p>
-            <p>
-              <strong>Version:</strong>
-              Released - 1.
-            </p>
+            
             <div class="project-tags">
-              <span class="tag">CSS</span>
-              <span class="tag">Email js</span>
-              <span class="tag">GSAP</span>
-              <span class="tag">HTML</span>
+              <span class="tag">Block Chain</span>
+              <span class="tag">AI/ML</span>
+              <span class="tag">Node</span>
+              <span class="tag">Local-Database</span>
               <span class="tag">JavaScript</span>
               <span class="tag">Website</span>
             </div>
@@ -1241,14 +1237,14 @@
               <button class="ui-btn project-code-btn">
                 <span>
                   <a
-                    href="https://github.com/Passion-Over-Pain/AccountingFirm"
+                    href="https://www.igi-global.com/chapter/transformative-impact-of-blockchain-technology-on-healthcare-systems-and-socioeconomic-development/372579"
                     target="_blank">
-                    Code
+                    View
                   </a>
                 </span>
               </button>
 
-              <button class="ui-btn project-site-btn">
+              <!-- <button class="ui-btn project-site-btn">
                 <span>
                   <a
                     href="https://passion-over-pain.github.io/AccountingFirm/"
@@ -1256,11 +1252,11 @@
                     Site
                   </a>
                 </span>
-              </button>
+              </button> -->
 
-              <button class="ui-btn">
+              <!-- <button class="ui-btn">
                 <span onclick="starRepository(`AccountingFirm`)">Like</span>
-              </button>
+              </button> -->
             </div>
           </div>
           <div
@@ -1309,10 +1305,10 @@
               src="Images/Illustrations/bot-development.svg"
               alt="Chatbot Building"
               class="illustration" />
-            <h3>Bot Development</h3>
+            <h3>Machine Learning Developer</h3>
             <p>
-              Developing intelligent and automated bots for various
-              applications, enhancing efficiency and user experience.
+              Building intelligent models and solutions using machine learning techniques 
+              to drive automation, improve decision-making, and enhance user experience.
             </p>
           </div>
           <div class="skill-card">
@@ -1320,10 +1316,10 @@
               src="Images/Illustrations/desktop-development.svg"
               alt="Desktop Development"
               class="illustration" />
-            <h3>Desktop Development</h3>
+            <h3>Full Stack Development</h3>
             <p>
-              Creating cross-platform and native desktop applications designed
-              for efficiency and ease of use.
+              Designing and building end-to-end web applications, handling both frontend and backend development 
+              to deliver scalable, efficient, and user-friendly solutions.
             </p>
           </div>
           <div class="skill-card">
@@ -1368,9 +1364,17 @@
           <div class="story-content"></div>
           <button class="close-story">×</button>
         </div>
+        <div class="flexBox">
+          <h3
+            class="subTitle bounce section-title"
+            onclick="showNotification(`Whenever Tino feels...`,12)">
+            Professional Experience
+            <span class="helper">?</span>
+          </h3>
+        </div>
         <div class="social-posts-container">
           <a
-            href="https://www.linkedin.com/posts/tinotenda-mhedziso_studentdevelopers-nmustudents-nmucomputersociety-activity-7233195999819649024-cC6M?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEWDhyYB0fsz2ir802fc1jcJgodtwAgEVmE"
+            href="https://www.linkedin.com/in/subhamay-ganguly-526972248/"
             target="_blank">
             <div class="social-post">
               <img
@@ -1378,29 +1382,30 @@
                 alt="Post Preview"
                 class="social-post-image" />
               <div class="social-post-header">
-                <img
+                <!-- <img
                   src="Images/Me.webp"
                   alt="Profile Picture"
-                  class="social-profile-pic" />
+                  class="social-profile-pic" /> -->
                 <div class="social-post-info">
-                  <h2>Version Control</h2>
-                  <p class="social-post-meta">LinkedIn • 2 min read</p>
+                  <h2>Jr Back-End Developer</h2>
+                  <p class="social-post-meta">EVE Technologies Pvt Ltd</p>
+                  <p class="social-post-meta">[Aug 2025 - Present]</p>
                 </div>
-                <img
+                <!-- <img
                   src="Images/Icons/linkedin-dark.svg"
                   alt="LinkedIn Icon"
-                  class="social-platform-icon" />
+                  class="social-platform-icon" /> -->
               </div>
               <p class="social-post-preview">
-                Finally... I got the opportunity to bring more people into
-                open-source projects through Git and GitHub😌. Something that
-                seems daunting at first but...
+                Migrated MySQL to PostgreSQL, optimized API authentication (40% faster logins), 
+                building an LLM-powered chatbot with Rasa & LangChain, automated cPanel provisioning, 
+                and integrated FaceIO biometric authentication for enhanced security...
               </p>
             </div>
           </a>
 
           <a
-            href="https://dev.to/passionoverpain/debugging-adventure-day-1-what-to-do-when-your-code-doesnt-work-2ji2"
+            href="https://www.linkedin.com/in/subhamay-ganguly-526972248/"
             target="_blank">
             <div class="social-post">
               <img
@@ -1408,29 +1413,29 @@
                 alt="Post Preview"
                 class="social-post-image" />
               <div class="social-post-header">
-                <img
+                <!-- <img
                   src="Images/Me.webp"
                   alt="Profile Picture"
-                  class="social-profile-pic" />
+                  class="social-profile-pic" /> -->
                 <div class="social-post-info">
-                  <h2>Debugging Adventure</h2>
-                  <p class="social-post-meta">Dev.to • 3 min read</p>
+                  <h2>Tech Support Executive</h2>
+                  <p class="social-post-meta">EVE Technologies Pvt Ltd</p>
+                  <p class="social-post-meta">[Feb 2025 - Aug 2025]</p>
                 </div>
-                <img
+                <!-- <img
                   src="Images/Icons/dev-dark.svg"
                   alt="Dev.to Icon"
-                  class="social-platform-icon" />
+                  class="social-platform-icon" /> -->
               </div>
               <p class="social-post-preview">
-                During your coding quest, you encounter a formidable enemy — an
-                unexpected bug in your project that brings everything to a
-                halt...
+                Enhanced client onboarding with real-time backend fixes ensuring zero downtime, 
+                while translating requirements into scalable solutions that cut change requests by 30%...
               </p>
             </div>
           </a>
 
           <a
-            href="https://dev.to/passionoverpain/unlocking-the-secret-gem-inside-a-centered-div-4d9j"
+            href="https://www.linkedin.com/in/subhamay-ganguly-526972248/"
             target="_blank">
             <div class="social-post">
               <img
@@ -1438,35 +1443,37 @@
                 alt="Post Preview"
                 class="social-post-image" />
               <div class="social-post-header">
-                <img
+                <!-- <img
                   src="Images/Me.webp"
                   alt="Profile Picture"
-                  class="social-profile-pic" />
+                  class="social-profile-pic" /> -->
                 <div class="social-post-info">
-                  <h2>CSS Styles</h2>
-                  <p class="social-post-meta">Dev.to • 4 min read</p>
+                  <h2>Research & Development Intern</h2>
+                  <p class="social-post-meta">University of Calcutta</p>
+                  <p class="social-post-meta">[Jun 2023 - Aug 2024]</p>
                 </div>
-                <img
+                <!-- <img
                   src="Images/Icons/dev-dark.svg"
                   alt="Dev.to Icon"
-                  class="social-platform-icon" />
+                  class="social-platform-icon" /> -->
               </div>
               <p class="social-post-preview">
-                If you’re just starting out on your web development journey,
-                you’ve probably realized how frustrating CSS can be when you
-                don’t fully understand...
+                Developed AI/ML solutions (OCR, deepfake & disease prediction) recognized at AISC-2024 & 
+                ICSTA-2023, optimized Node.js/Python/MongoDB backends (+30% performance), 
+                explored lip-reading Silent Sound Tech, and built a TensorFlow crab 
+                disease detection model...
               </p>
             </div>
           </a>
         </div>
 
         <ul class="socialIconsCon">
-          <li class="social-Icon">
+          <!-- <li class="social-Icon">
             <a href="https://dev.to/passionoverpain" target="_blank">
               <i class="fa-brands fa-dev"></i>
               <span>Dev.to</span>
             </a>
-          </li>
+          </li> -->
           <li class="social-Icon">
             <a href="mailto:subhag702@gmail.com" target="_blank">
               <i class="fa-solid fa-envelope-circle-check"></i>
@@ -1474,14 +1481,14 @@
             </a>
           </li>
           <li class="social-Icon">
-            <a href="https://github.com/Passion-Over-Pain" target="_blank">
+            <a href="https://github.com/STREIN-11" target="_blank">
               <i class="fa-brands fa-github"></i>
               <span>GitHub</span>
             </a>
           </li>
           <li class="social-Icon" id="LinkedInChecker">
             <a
-              href="https://za.linkedin.com/in/tinotenda-mhedziso"
+              href="https://www.linkedin.com/in/subhamay-ganguly-526972248/"
               target="_blank">
               <i class="fa-brands fa-linkedin"></i>
               <span>LinkedIn</span>
@@ -1505,8 +1512,8 @@
           <div class="footer-column">
             <h4>Highlighted Skills</h4>
             <ul>
-              <li>Bot Development</li>
-              <li>Desktop Applications Development</li>
+              <li>Machine Learning Developer</li>
+              <li>Full Stack Development</li>
               <li>Web Applications Development</li>
             </ul>
           </div>
@@ -1519,7 +1526,7 @@
                     src="Images/Icons/theAtlasSix.svg"
                     alt="The Atlas Six Icon" />
                 </a>
-                <p class="project-name">The Atlas Six</p>
+                <p class="project-name">Modern Irrigation System</p>
               </li>
               <li>
                 <a href="#Passion">
@@ -1527,7 +1534,7 @@
                     src="Images/Icons/her.svg"
                     alt="Passion footer project icon" />
                 </a>
-                <p class="project-name">Passion</p>
+                <p class="project-name">Skin Phenotype Detection</p>
               </li>
               <li>
                 <a href="#CreateIT">
@@ -1535,7 +1542,7 @@
                     src="Images/Icons/createIT.svg"
                     alt="CreateIT footer project Icon" />
                 </a>
-                <p class="project-name">CreateIT</p>
+                <p class="project-name">LIP Reading</p>
               </li>
               <li>
                 <a href="#CheckIT">
@@ -1543,7 +1550,7 @@
                     src="Images/Icons/checklist.svg"
                     alt="Project Management App Icon" />
                 </a>
-                <p class="project-name">CheckIT</p>
+                <p class="project-name">Emotion Detection</p>
               </li>
               <li>
                 <a href="#KnightPortfolio">
@@ -1551,7 +1558,7 @@
                     src="Images/Icons/portfolio.svg"
                     alt="Knight Portfolio Icon" />
                 </a>
-                <p class="project-name">Old Portfolio</p>
+                <p class="project-name">FauxShield</p>
               </li>
             </ul>
           </div>
