--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
             <img src="Images/Icons/privacy.svg" alt="Terms Icon" />
             <x>Terms of Service</x>
           </li>
-<!--           <li
+          <li
             onclick="starRepository('Tinotenda-Mhedziso')"
             id="LikeWebsiteChecker">
             <img
@@ -699,18 +699,18 @@
               alt="Like this website Icon" />
             <x>Like My Website</x>
           </li>
-          <li onclick="followUser()">
+          <!-- <li onclick="followUser()">
             <img
               src="Images/Icons/support.svg"
               alt="Follow Subhamay Ganguly Icon" />
             <x>Follow Me</x>
-          </li> -->
+          </li>
           <li onclick="supportMe()">
             <img
               src="Images/Icons/support.svg"
               alt="Support Subhamay Ganguly  Icon" />
             <x>Support Me</x>
-          </li>
+          </li> -->
         </ul>
       </nav>
     </header>
@@ -1590,12 +1590,12 @@
                       "botId": "2e1f3e65-ea48-48d4-bf96-eb204d7e61bb",
                       "configuration": {
                         "composerPlaceholder": "Talk to Passion",
-                        "botName": "STREIN",
+                        "botName": "Passion",
                         "botAvatar": "https://files.bpcontent.cloud/2025/01/06/21/20250106210904-DJXTBL7U.webp",
                         "botDescription": "My AI-powered personalized chatbot.",
                         "website": {
-                          "title": "https://www.linkedin.com/in/subhamay-ganguly-526972248/",
-                          "link": "https://www.linkedin.com/in/subhamay-ganguly-526972248/"
+                          "title": "https://tinotenda-mhedziso.pages.dev/",
+                          "link": "https://tinotenda-mhedziso.pages.dev/"
                         },
                         "email": {
                           "title": "subhag702@gmail.com",
@@ -1694,5 +1694,3 @@
     <script type="text/javascript" src="function.js" defer></script>
   </body>
 </html>
-
-
