--- a/index.html
+++ b/index.html
@@ -1590,12 +1590,12 @@
                       "botId": "2e1f3e65-ea48-48d4-bf96-eb204d7e61bb",
                       "configuration": {
                         "composerPlaceholder": "Talk to Passion",
-                        "botName": "Passion",
-                        "botAvatar": "https://files.bpcontent.cloud/2025/01/06/21/20250106210904-DJXTBL7U.webp",
+                        "botName": "STREIN",
+                        "botAvatar": "https://raw.githubusercontent.com/STREIN-11/NightTab/STREIN/Cartoon Style Robot.jpg",
                         "botDescription": "My AI-powered personalized chatbot.",
                         "website": {
-                          "title": "https://tinotenda-mhedziso.pages.dev/",
-                          "link": "https://tinotenda-mhedziso.pages.dev/"
+                          "title": "https://www.linkedin.com/in/subhamay-ganguly-526972248/",
+                          "link": "https://www.linkedin.com/in/subhamay-ganguly-526972248/"
                         },
                         "email": {
                           "title": "subhag702@gmail.com",
