Full & Final change

--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
           <div class="project-preview">
             <img
               loading="lazy"
-              src="Images/Previews/Passion.webp"
+              src="Images/Previews/skin.webp"
               alt="Passion Preview" />
           </div>
         </div>
@@ -1114,14 +1114,14 @@
               <button class="ui-btn project-code-btn">
                 <span>
                   <a
-                    href="https://github.com/Passion-Over-Pain/CreateIT"
+                    href="https://scholar.google.co.in/citations?view_op=view_citation&hl=en&user=QLL-DPEAAAAJ&citation_for_view=QLL-DPEAAAAJ:u5HHmVD_uO8C"
                     target="_blank">
-                    Code
+                    View
                   </a>
                 </span>
               </button>
 
-              <button class="ui-btn project-download-btn">
+              <!-- <button class="ui-btn project-download-btn">
                 <span>
                   <a
                     href="https://github.com/Passion-Over-Pain/CreateIT/releases/download/v1.2/CreateIT.zip">
@@ -1132,13 +1132,13 @@
 
               <button class="ui-btn">
                 <span onclick="starRepository(`CreateIT`)">Like</span>
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="project-preview">
             <img
               loading="lazy"
-              src="Images/Previews/CreateIT.webp"
+              src="Images/Previews/emotion.webp"
               alt="CreateIT Preview" />
           </div>
         </div>
@@ -1202,7 +1202,7 @@
               target="_blank">
               <img
                 loading="lazy"
-                src="Images/Previews/Old-Portfolio.webp"
+                src="Images/Previews/deep.webp"
                 alt="Knight Portfolio Preview" />
             </a>
           </div>
@@ -1268,7 +1268,7 @@
               target="_blank">
               <img
                 loading="lazy"
-                src="Images/Previews/AccountingFirm.webp"
+                src="Images/Previews/block.webp"
                 alt="Accounting Firm Website Preview" />
             </a>
           </div>
@@ -1347,23 +1347,25 @@
           </h3>
         </div>
         <div class="stories-container">
+          <a href="https://www.instagram.com/iamstrein__11/" target="_blank">
           <img
-            src="Images/Previews/Professional-cover.webp"
+            src="Images/Icons/instagram.png"
             alt="Professional Updates"
             class="story-icon"
-            data-story="professional" />
+            data-story="professional" /></a>
+            <a href="https://www.linkedin.com/in/subhamay-ganguly-526972248/" target="_blank">
           <img
-            src="Images/Previews/Casual-cover.webp"
+            src="Images/Icons/linkedin.png"
             alt="Casual Updates"
             class="story-icon"
-            data-story="casual" />
+            data-story="casual" /></a>
         </div>
 
-        <div class="story-viewer hidden">
+        <!-- <div class="story-viewer hidden">
           <div class="story-progress-bar"></div>
           <div class="story-content"></div>
           <button class="close-story">×</button>
-        </div>
+        </div> -->
         <div class="flexBox">
           <h3
             class="subTitle bounce section-title"
@@ -1594,7 +1596,7 @@
                         "botAvatar": "https://raw.githubusercontent.com/STREIN-11/NightTab/STREIN/Cartoon Style Robot.jpg",
                         "botDescription": "My AI-powered personalized chatbot.",
                         "website": {
-                          "title": "https://www.linkedin.com/in/subhamay-ganguly-526972248/",
+                          "title": "LinkedIn",
                           "link": "https://www.linkedin.com/in/subhamay-ganguly-526972248/"
                         },
                         "email": {
