--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
             <img src="Images/Icons/privacy.svg" alt="Terms Icon" />
             <x>Terms of Service</x>
           </li>
-          <li
+          <!-- <li
             onclick="starRepository('Tinotenda-Mhedziso')"
             id="LikeWebsiteChecker">
             <img
@@ -699,18 +699,18 @@
               alt="Like this website Icon" />
             <x>Like My Website</x>
           </li>
-          <!-- <li onclick="followUser()">
+          <li onclick="followUser()">
             <img
               src="Images/Icons/support.svg"
               alt="Follow Subhamay Ganguly Icon" />
             <x>Follow Me</x>
-          </li>
+          </li> -->
           <li onclick="supportMe()">
             <img
               src="Images/Icons/support.svg"
               alt="Support Subhamay Ganguly  Icon" />
             <x>Support Me</x>
-          </li> -->
+          </li>
         </ul>
       </nav>
     </header>
