Full and final change

--- a/index.html
+++ b/index.html
@@ -691,26 +691,27 @@
             <img src="Images/Icons/privacy.svg" alt="Terms Icon" />
             <x>Terms of Service</x>
           </li>
-          <li
-            onclick="starRepository('Tinotenda-Mhedziso')"
-            id="LikeWebsiteChecker">
-            <img
-              src="Images/Icons/like-website.svg"
-              alt="Like this website Icon" />
-            <x>Like My Website</x>
-          </li>
-          <li onclick="followUser()">
-            <img
-              src="Images/Icons/support.svg"
-              alt="Follow Subhamay Ganguly Icon" />
-            <x>Follow Me</x>
-          </li>
           <li onclick="supportMe()">
             <img
               src="Images/Icons/support.svg"
               alt="Support Subhamay Ganguly  Icon" />
             <x>Support Me</x>
           </li>
+          <li
+            onclick="starRepository('Tinotenda-Mhedziso')"
+            id="LikeWebsiteChecker">
+            <!-- <img
+              src="Images/Icons/like-website.svg"
+              alt="Like this website Icon" />
+            <x>Like My Website</x> -->
+          </li>
+          <li onclick="followUser()">
+            <!-- <img
+              src="Images/Icons/support.svg"
+              alt="Follow Subhamay Ganguly Icon" />
+            <x>Follow Me</x> -->
+          </li>
+          
         </ul>
       </nav>
     </header>
